--- a/CodigoFuente/x64/Orbita/Orbita.Winsock/Orbita.Winsock.vbproj
+++ b/CodigoFuente/x64/Orbita/Orbita.Winsock/Orbita.Winsock.vbproj
@@ -12,14 +12,10 @@
     <AssemblyName>Orbita.Winsock</AssemblyName>
     <MyType>Windows</MyType>
     <OptionStrict>On</OptionStrict>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
