--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
@@ -150,6 +150,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
     <DocumentationFile>bin\x64\Release\Orbita.VA.Comun.XML</DocumentationFile>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Forzar32|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -162,10 +164,8 @@
     <DocumentationFile>bin\x64\Ofuscado\Orbita.VA.Comun.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge.Video.FFMPEG, Version=2.2.4.0, Culture=neutral, PublicKeyToken=03563089b1be05dd, processorArchitecture=x86">
+    <Reference Include="AForge.Video.FFMPEG">
       <HintPath>..\..\Comun\VA\AForge\AForge.Video.FFMPEG.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
     </Reference>
     <Reference Include="Cognex.VisionPro, Version=47.0.0.0, Culture=neutral, PublicKeyToken=ef0f902af9dee505, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
@@ -256,7 +256,9 @@
     <Compile Include="Clases\Thread\OThreadLoop.cs" />
     <Compile Include="Clases\Utiles\OUsuarios.cs" />
     <Compile Include="Clases\Logs\OExtensionLogs.cs" />
-    <Compile Include="Clases\Video\OVideoFile.cs" />
+    <Compile Include="Clases\Video\OVideoFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clases\Core\OSistema.cs" />
   </ItemGroup>
