--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.Hardware/Orbita.VA.Hardware.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.Hardware/Orbita.VA.Hardware.csproj
@@ -154,6 +154,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
     <DocumentationFile>bin\x64\Release\Orbita.VA.Hardware.XML</DocumentationFile>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Forzar32|x64'">
     <PlatformTarget>x64</PlatformTarget>
