--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.MaquinasEstados/Orbita.VA.MaquinasEstados.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.MaquinasEstados/Orbita.VA.MaquinasEstados.csproj
@@ -150,6 +150,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
     <DocumentationFile>bin\x64\Release\Orbita.VA.MaquinasEstados.XML</DocumentationFile>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Forzar32|x64'">
     <PlatformTarget>x64</PlatformTarget>
