--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -95,16 +95,22 @@
   <ItemGroup>
     <Compile Include="Dispositivos\Colecciones\OConfigDispositivo.cs" />
     <Compile Include="Dispositivos\Colecciones\OEstadoComms.cs" />
+    <Compile Include="Dispositivos\Colecciones\OEventArgsComs.cs" />
     <Compile Include="Dispositivos\ODispositivoES.cs" />
     <Compile Include="Dispositivos\ODispositivoILBKPhoenix.cs" />
     <Compile Include="Dispositivos\ODispositivoMCUSB.cs" />
     <Compile Include="Dispositivos\ODispositivoSiemens1200ES.cs" />
+    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGLPR.cs" />
+    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOSL.cs" />
+    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGTRA.cs" />
     <Compile Include="Protocolos\ModBusTCP\OProtocoloModbusTCP.cs" />
     <Compile Include="Protocolos\OPC\Constantes\Constantes.cs" />
     <Compile Include="Protocolos\OPC\Info\OOPCEnlaces.cs" />
     <Compile Include="Protocolos\Phoenix\OProtocoloTCPPhoenixES.cs" />
     <Compile Include="Protocolos\Protocolo.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemens.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateLPR.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateLPROS.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCRES.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOSES.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateTrafficES.cs" />
