--- a/CodigoFuente/x32/Orbita.Controles/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -49,6 +49,14 @@
     <Reference Include="Orbita.Trazabilidad">
       <HintPath>..\..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
     </Reference>
+    <Reference Include="Orbita.Utiles, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Winsock, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Comun\Orbita\Orbita.Winsock.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -61,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteTCP.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
