--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -87,6 +87,15 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\Comun\Comunicaciones\opcrcw.da.dll</HintPath>
     </Reference>
+    <Reference Include="Orbita.Trazabilidad">
+      <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Utiles">
+      <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Winsock">
+      <HintPath>..\..\Comun\Orbita\Orbita.Winsock.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -156,20 +165,6 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
-      <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
-      <Name>Orbita.Trazabilidad</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Utiles\Orbita.Utiles.csproj">
-      <Project>{DAD5D2A3-9C23-4C22-ABEB-4DF8258170AD}</Project>
-      <Name>Orbita.Utiles</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Winsock\Orbita.Winsock.vbproj">
-      <Project>{71BD7FF7-F873-49B9-8DC2-C41F909D7300}</Project>
-      <Name>Orbita.Winsock</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagramComs.cd" />
