--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
@@ -2,121 +2,78 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B9B780FC-3924-47C9-A276-8957E0164BF0}</ProjectGuid>
+    <ProjectGuid>{F487D161-E29E-4039-89EB-07FC1DA15D39}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Orbita.Framework.Core</RootNamespace>
     <AssemblyName>Orbita.Framework.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>%24/Librerias/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core</SccProjectName>
-    <SccLocalPath>.</SccLocalPath>
-    <SccAuxPath>http://01x0019:8080/tfs/orbitasoftware</SccAuxPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\x86\Debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\x86\Debug\Orbita.Framework.Core.XML</DocumentationFile>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Orbita.Framework.Core.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Framework|x86'">
-    <OutputPath>bin\x86\Framework\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Colecciones\TypeToPropertyInfoDictionaryAssociation.cs" />
-    <Compile Include="Colecciones\PropertyInfoDictionary.cs" />
-    <Compile Include="Colecciones\TargetDictionary.cs" />
-    <Compile Include="Colecciones\TargetCollection.cs" />
-    <Compile Include="Configuración\ArrayParameterAttribute.cs" />
-    <Compile Include="Configuración\PropertyHelper.cs" />
-    <Compile Include="Configuración\FactoryHelper.cs" />
-    <Compile Include="Targets\TargetConfiguration.cs" />
-    <Compile Include="Utilidades\Utiles.cs" />
-    <Compile Include="Persistencia\Persistencia.cs" />
-    <Compile Include="Colecciones\TypeDictionary.cs" />
-    <Compile Include="Targets\TargetFactory.cs" />
-    <Compile Include="Configuración\XmlConfiguration.cs" />
-    <Compile Include="Targets\TargetAttribute.cs" />
-    <Compile Include="Configuración\RequiredParameterAttribute.cs" />
-    <Compile Include="Targets\Configurador.cs" />
-    <Compile Include="Enumerados\Idioma.cs" />
-    <Compile Include="Enumerados\EstadoVentana.cs" />
-    <Compile Include="Enumerados\TipoForm.cs" />
-    <Compile Include="EventArgs\IdiomaChangedEventArgs.cs" />
-    <Compile Include="Extensiones internas\ExtendedFile.cs" />
-    <Compile Include="Extensiones internas\ExtendedObject.cs" />
-    <Compile Include="Extensiones internas\ExtendedString.cs" />
-    <Compile Include="Interfaces\IFormConfigurador.cs" />
-    <Compile Include="Interfaces\IPersistencia.cs" />
-    <Compile Include="Interfaces\IFormIdioma.cs" />
-    <Compile Include="Interfaces\IFormPlugin.cs" />
-    <Compile Include="Interfaces\IIdioma.cs" />
-    <Compile Include="Interfaces\IPlugin.cs" />
-    <Compile Include="Interfaces\IUserControlPlugin.cs" />
-    <Compile Include="Plugins\Configuracion.cs" />
-    <Compile Include="Plugins\ControlInfo.cs" />
-    <Compile Include="Plugins\PluginHelper.cs" />
-    <Compile Include="Plugins\PluginConfiguracion.cs" />
-    <Compile Include="Plugins\PluginInfo.cs" />
-    <Compile Include="Plugins\PluginOMenuStrip.cs">
-      <SubType>Component</SubType>
+    <Compile Include="Configuración\ConfiguracionEntorno.cs" />
+    <Compile Include="Configuración\ControlInfo.cs" />
+    <Compile Include="Configuración\Configuracion.cs" />
+    <Compile Include="Configuración\ConfiguracionHelper.cs" />
+    <Compile Include="Definiciones\OIContainerForm.cs" />
+    <Compile Include="Enumerados\SelectorIdioma.cs" />
+    <Compile Include="Formularios\ContainerForm.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Plugins\PluginOTreeView.cs">
-      <SubType>Component</SubType>
+    <Compile Include="Formularios\ContainerForm.designer.cs">
+      <DependentUpon>ContainerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Colecciones\PluginConfiguracionCollection.cs" />
+    <Compile Include="Interfaces\IConfiguracion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Targets\Target.cs" />
-    <Compile Include="Targets\Autenticación.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Orbita.Controles.Comunicaciones\Orbita.Controles.Comunicaciones.csproj">
+      <Project>{7E7DAFD4-3823-46B8-917C-FCEA9431A1A9}</Project>
+      <Name>Orbita.Controles.Comunicaciones</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Orbita.Controles.Contenedores\Orbita.Controles.Contenedores.csproj">
       <Project>{B953E685-3E2D-4F93-BB80-805427BBB8A2}</Project>
       <Name>Orbita.Controles.Contenedores</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuración\Configuracion.xml" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)Orbita.Framework.Core.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I
-xcopy "$(TargetDir)Orbita.Framework.Core.xml" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
