--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Framework/Orbita.Framework.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Framework/Orbita.Framework.csproj
@@ -45,7 +45,8 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\Orbita.Framework.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
