--- a/CodigoFuente/x64/Orbita.Controles/Orbita.Controles.Gantt/Orbita.Controles.Gantt.csproj
+++ b/CodigoFuente/x64/Orbita.Controles/Orbita.Controles.Gantt/Orbita.Controles.Gantt.csproj
@@ -117,7 +117,9 @@
     <Compile Include="UC\OrbitaUltraGanttView.Designer.cs">
       <DependentUpon>OrbitaUltraGanttView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Custom\OrbitaGantt.cs" />
+    <Compile Include="Custom\OrbitaGantt.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Custom\OrbitaGantt.Designer.cs">
       <DependentUpon>OrbitaGantt.cs</DependentUpon>
     </Compile>
