--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
@@ -164,9 +164,6 @@
     <DocumentationFile>bin\x64\Ofuscado\Orbita.VA.Comun.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge.Video.FFMPEG">
-      <HintPath>..\..\Comun\VA\AForge\AForge.Video.FFMPEG.dll</HintPath>
-    </Reference>
     <Reference Include="Cognex.VisionPro, Version=47.0.0.0, Culture=neutral, PublicKeyToken=ef0f902af9dee505, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Comun\VA\Cognex\Cognex.VisionPro.dll</HintPath>
@@ -256,9 +253,6 @@
     <Compile Include="Clases\Thread\OThreadLoop.cs" />
     <Compile Include="Clases\Utiles\OUsuarios.cs" />
     <Compile Include="Clases\Logs\OExtensionLogs.cs" />
-    <Compile Include="Clases\Video\OVideoFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clases\Core\OSistema.cs" />
   </ItemGroup>
@@ -282,7 +276,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Clases\Video\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetDir)Orbita.VA.Comun.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I
