--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.PluginManager/Orbita.Framework.PluginManager.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.PluginManager/Orbita.Framework.PluginManager.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventArgs\IdiomaChangedEventArgs.cs" />
+    <Compile Include="Interfaces\IFormManejadorCierre.cs" />
     <Compile Include="Interfaces\IFormIdioma.cs" />
     <Compile Include="Interfaces\IMenuPlugin.cs" />
     <Compile Include="Interfaces\IFormPlugin.cs" />
