--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Clases\App.cs" />
     <Compile Include="Clases\AppBD.cs" />
+    <Compile Include="Enumerados\TipoAutenticacion.cs" />
     <Compile Include="EventArgs\AutenticacionChangedEventArgs.cs" />
     <Compile Include="Formularios\FrmValidar.cs">
       <SubType>Form</SubType>
@@ -67,11 +68,20 @@
     <Compile Include="Core\OLogonOpenLDAP.cs" />
     <Compile Include="Clases\OManagerValidacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Formularios\FrmValidar.resx">
       <DependentUpon>FrmValidar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
