--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
@@ -22,7 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>
     </DocumentationFile>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
